# ai-assistant

./: README.md  clipboard.py  main.py  pyproject.toml
llm/: __init__.py  llm.py  prompt.py
